# kladml

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.agent/workflows/: development.md
.github/workflows/: publish.yml
architecture/: index.html
cli/: index.html
core_concepts/: index.html
deployment/: index.html
docs/: architecture.md  cli.md  core_concepts.md  deployment.md  evaluation.md  getting_started.md  index.md  roadmap.md
getting_started/: index.html
roadmap/: index.html
scripts/: reconstruct_runs.py  sync_datasets.py
search/: search_index.json
src/kladml/: _version.py  base.py
src/kladml/backends/: __init__.py  console_publisher.py  local_metadata.py  local_tracker.py
src/kladml/cli/: data.py  evaluate.py  experiments.py  export.py  main.py  models.py  projects.py  run.py  train.py
src/kladml/config/: schema.py  settings.py
src/kladml/db/: __init__.py  models.py  session.py
src/kladml/evaluation/: registry.py
src/kladml/exporters/: __init__.py  onnx.py  torchscript.py
src/kladml/interfaces/: metadata.py  tracker.py
src/kladml/models/: __init__.py  registry.py
src/kladml/training/: __init__.py  callbacks.py  checkpoint.py  executor.py  run_id.py  trainer.py
src/kladml/tui/: __init__.py  app.py  screens.py
src/kladml/utils/: loading.py
tests/: test_db.py  test_tracker.py
tests/db/: test_unified_schema.py
tests/functional/: test_cli_flow.py  test_cli_tune.py
tests/integration/: test_gluformer_integration.py
tests/integration/db/: test_cohabitation.py
tests/models/vision/: test_resnet.py
tests/unit/backends/: test_tracker.py
tests/unit/cli/: test_evaluate_cli.py  test_export_cli.py  test_train_args.py
tests/unit/evaluation/: test_evaluator_system.py
tests/unit/exporters/: test_exporters.py
tests/unit/models/: test_model_registry.py
(+18 files in other folders)
